# haimoney-ai

./: .env-example  .gitignore  Claude.md  README.md  README_openai_scripts.md  asset_extraction_results.json  basic_fact_results.json  cleanup_openai_files.py  count_files.py  debug_concurrent_results.txt  debug_extraction.py  example.text  extract_files.py  extraction_log.json  extraction_out.md  extractor.py  flow.excalidraw  json.json  main.py  miigration.md  openai_file_manager.py  openai_uploaded_files.json  pyproject.toml  requirements.txt  response_api_structured.py  sample_prompt.txt  setup.py  steps.md  structured.py  test  test.js  web_extractor.py
context/: openai_api_migration.md
doc/: flow.excalidraw
extraction/: execute_test_dump.py  extract_upload_folder.py  extraction.py  file_extract.py  gemini_file_extract.py  system_prompt.txt  test_results.txt
extraction/test/: e2e_test.py
factfind/: __init__.py  asset_extraction.py  base_extractor.py  basic_fact.py  basic_info_extract_system_prompt.mustach  fact_aggregator.py  factfind.py  financial_detail_extraction.json  financial_detail_extraction.mst  main.py  shared_models.py
factfind/asset/: __init__.py  asset_detail_extraction.mst  asset_extraction.py
factfind/basic/: __init__.py  basic_fact.py  basic_info_extract_system_prompt.mst
factfind/expense/: __init__.py  (+2 more)
service/: llm_file_analysis.py
templates/: index.html
test/: basic_fact_e2e_test.py  extract_and_basic_analysis_test.py  gemini_extract_e2e_test.py  test_concurrent_extraction.py  test_llm_json_parser.py
tools/: __init__.py
(+34 files in other folders)
