[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "haimoney-ai"
version = "0.1.0"
description = "AI tools for financial analysis and file extraction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-socketio>=5.5.1",
    "google-generativeai>=0.8.5",
    "openai>=1.107.2",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "watchdog>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tools", "service"]
